# enigma

./: .gitignore  Cargo.toml  README.md
crates/enigma-cli/: Cargo.toml
crates/enigma-cli/src/: identity.rs  main.rs  network.rs  ui.rs  vault.rs
crates/enigma-core/: Cargo.toml
crates/enigma-core/src/: lib.rs  models.rs
