[workspace]
members = ["crates/enigma-core", "crates/enigma-cli"]
resolver = "2"

[workspace.dependencies]
# Pointing to the main branch for shared types
axion-core = { git = "https://github.com/thetrueshags/axion", branch = "main" }
axion-crypto = { git = "https://github.com/thetrueshags/axion", branch = "main" }
axion-net = { git = "https://github.com/thetrueshags/axion", branch = "main" }

# Cryptography
aes-gcm = "0.10"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3.5"
rand = "0.8"
sha3 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"

# CLI Utils
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.36", features = ["full"] }
console = "0.15"
dialoguer = "0.11"
reqwest = { version = "0.11", features = ["json"] }