[package]
name = "enigma-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
enigma-core = { path = "../enigma-core" }
axion-core = { workspace = true }
axion-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
console = { workspace = true }
dialoguer = { workspace = true }
reqwest = { workspace = true }