[package]
name = "enigma-cli"
version = "1.0.0"
edition = "2021"

[dependencies]
enigma-core = { path = "../enigma-core" }
axion-core = { workspace = true }
axion-crypto = { workspace = true }

# CLI & UX
clap = { version = "4.4", features = ["derive", "env"] }
console = "0.15"
dialoguer = "0.11"
directories = "5.0" # NEW: For cross-platform identity storage

# Network & Serialization
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.36", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }